syntax = "proto3";

message MapKeys {
  message KeySet { // next = 2
	repeated string keys = 1;
  }

  message KeyDelta { // next = 3
	repeated string add = 1;
	repeated string remove = 2;
  }

  oneof keysData {
	KeySet keySet = 1;
	KeyDelta keyDelta = 2;
  }
}